--- a/app/views/templates/main.hbs
+++ b/app/views/templates/main.hbs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -7,9 +7,13 @@
   <meta name="description" content="Connecting communities">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  {{!-- stylesheets --}}
+  <link type="text/css" rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  {{!-- Google Fonts --}}
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+
 </head>
 
 <body>
