--- a/app/views/templates/main.hbs
+++ b/app/views/templates/main.hbs
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   {{!-- stylesheets --}}
-  <link type="text/css" rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 
   {{!-- Google Fonts --}}
