--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -15,10 +15,15 @@
 
 
 /* base element styles */
+html {
+  font-size: 62.5%; /* 10px = 1rem! */
+}
+
 body {
   background-color: var(--bg);
   color: var(--text-color);
   font-family: var(--base-font);
+  font-size: 1.6rem;
 }
 
 
