--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -1,6 +1,3 @@
 <h1>Hello {{name}}<h1>
 
-<form class="send-form" action="/send-message" method="POST">
-  <textarea class="send-form__input" placeholder="your message"></textarea>
-  <button class="send-form__button">Send Me</button>
-</form>
+IFRAME ME!
