--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -1,3 +1,7 @@
-<h1>Hello {{name}}<h1>
+<h1>Spirit of the Place<h1>
 
-IFRAME ME!
+<iframe
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/c6f73c4d-1900-4734-a0af-42fa0722963e">
+</iframe>
