put up a basic structure for building a custom bot and iframe as a backup

--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -1,7 +1,7 @@
-<h1>Spirit of the Place<h1>
+<div class="botui-app-container" id="hello-world">
+  <bot-ui></bot-ui>
+</div>
 
-<iframe
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/c6f73c4d-1900-4734-a0af-42fa0722963e">
-</iframe>
+<script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/botui/build/botui.js"></script>
+<script src="js/spirit.js"></script>
