--- a/app/views/templates/default.hbs
+++ b/app/views/templates/default.hbs
@@ -10,6 +10,11 @@
   {{!-- stylesheets --}}
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/botui/build/botui.min.css">
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/botui/build/botui-theme-default.css">
+
+  <link
+
 
   {{!-- Google Fonts --}}
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
@@ -17,12 +22,14 @@
 </head>
 
 <body>
+
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <div class="container">
-    {{{body}}}
-  </div>
+
+  {{{body}}}
+
+
 
 </body>
 
