--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -6,7 +6,7 @@
   --fw-bold: 600;
 
   /* colors */
-  --bg: #f1f1f1;
+  --bg: #fff;
   --text-color: #444;
 
   /* sizing */
@@ -45,3 +45,5 @@ body {
   margin: 0 auto;
   padding: var(--spacing) 0;
 }
+
+/* chatbot */
