--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -4,5 +4,5 @@
 
 <script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/botui/build/botui.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/socket.io-client@1.3.2/socket.io.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 <script src="js/spirit.js"></script>
