--- a/app/views/templates/default.hbs
+++ b/app/views/templates/default.hbs
@@ -6,14 +6,13 @@
   <title>Spirit of the Place</title>
   <meta name="description" content="Connecting communities">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 
   {{!-- stylesheets --}}
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/botui/build/botui.min.css">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/botui/build/botui-theme-default.css">
-
-  <link
 
 
   {{!-- Google Fonts --}}
