--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -1,8 +1,11 @@
-<div class="botui-app-container" id="hello-world">
-  <bot-ui></bot-ui>
-</div>
+<div class="bg">
+  <div class="bot">
+    <div class="botui-app-container" id="hello-world">
+      <bot-ui></bot-ui>
+    </div>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/botui/build/botui.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-<script src="js/spirit.js"></script>
+  <div class="notice">
+    <p>This is a basic demonstration of the ‘Spirit of the Place’ chatbot put together on City Data Hack 2018. <a href="https://github.com/CityDataHack/AlternativeTreatment" target="_blank">Visit the GitHub repo</p>
+  </div>
+</div>
