add demo page, add dynamic titles

--- a/app/views/templates/default.hbs
+++ b/app/views/templates/default.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Spirit of the Place</title>
+  <title>{{title}}</title>
   <meta name="description" content="Connecting communities">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/png" href="img/favicon.png">
