--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -8,6 +8,8 @@
   /* colors */
   --bg: #fff;
   --text-color: #444;
+  --gray-light: #f9f9f9;
+  --gray: #e9e9e9;
 
   /* sizing */
   --container-width: 580px;
@@ -39,24 +41,56 @@ body {
 }
 
 
-/* custom */
+/* layout */
 .container {
-  min-height: 100vh;
-  padding: 12rem 0;
+  /* min-height: 100vh; */
+  /* padding: 12rem 0; */
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  /* background-color: #f9f9f9; */
+  justify-content: center;
 }
 
-.bot {
-  margin: 0 auto;
-  max-width: var(--container-width);
-}
-
+/* notice */
 .notice {
   align-self: flex-end;
   justify-self: flex-end;
   font-size: 0.9rem;
 }
 
+
+/* bot */
+.bot {
+  margin: 0 auto;
+  max-width: var(--container-width);
+}
+
+/* board */
+.board {
+
+}
+
+/* demo */
+.demo {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100vh;
+}
+
+.demo__bot {
+  width: 35%;
+  height: 100vh;
+  border-right: 1px solid var(--gray);
+}
+
+.demo__board {
+  width: 65%;
+  height: 100vh;
+}
+
+.demo iframe {
+  border: none;
+  width: 100%;
+  height: 99vh;
+}
