--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -1,4 +1,5 @@
-<div class="bg">
+<div class="welcome">
+
   <div class="bot">
     <div class="botui-app-container" id="hello-world">
       <bot-ui></bot-ui>
@@ -6,6 +7,25 @@
   </div>
 
   <div class="notice">
-    <p>This is a basic demonstration of the ‘Spirit of the Place’ chatbot put together on City Data Hack 2018. <a href="https://github.com/CityDataHack/AlternativeTreatment" target="_blank">Visit the GitHub repo</p>
+    <h1>Spirit of the Place</h1>
+    <p>This is a basic demonstration of the ‘Spirit of the Place’ chatbot put together over a weekend on City Data Hack 2018.</p>
+    <ul class="links">
+      <li>
+        <a href="https://github.com/CityDataHack/AlternativeTreatment" target="_blank">
+        GitHub repo
+        </a>
+      </li>
+      <li>
+        <a href="/demo" target="_blank">
+        Demo
+        </a>
+      </li>
+      <li>
+        <a href="/bot" target="_blank">
+        Chatbot
+        </a>
+      </li>
+    </ul>
   </div>
+
 </div>
