--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -12,7 +12,7 @@
     <ul class="links">
       <li>
         <a href="https://github.com/CityDataHack/AlternativeTreatment" target="_blank">
-        GitHub repo
+        GitHub (project documentation)
         </a>
       </li>
       <li>
