--- a/app/views/demo.hbs
+++ b/app/views/demo.hbs
@@ -1,11 +1,25 @@
 <div class="demo">
 
   <div class="demo__bot">
-    <iframe src="/bot"></iframe>
+    <div class="bot">
+      <div class="botui-app-container" id="hello-world">
+        <bot-ui></bot-ui>
+      </div>
+    </div>
   </div>
 
   <div class="demo__board">
-    <iframe src="/board"></iframe>
+    <div class="board">
+      <h1>Spirit of <span>Margeret Bonfield Ave</span></h1>
+
+      <hr>
+      <h2>Neighborhood events</h2>
+      <ul class="schedule">
+        <li id="addon" class="addon hidden"><span>Today @6:45pm, 18 March</span> – Going to choir concert <span class="notification">Meeting scheduled</span></li>
+        <li><span>Monday @6:00pm, 19 March</span> – Communal gardening</li>
+        <li><span>Thursday @8:00pm, 22 March</span> – Building management meeting</li>
+      </ul>
+    </div>
   </div>
 
 </div>
